include/Win32/Physics.NewtonImport.hpp

struct TNewtonCollisionMaterial;
typedef float dFloat;
typedef float *PFloat;
typedef int *PInteger;
typedef void * *PNewtonMesh;
typedef void * *PNewtonBody;
typedef void * *PNewtonWorld;
typedef void * *PNewtonCollision;
struct DECLSPEC_DRECORD TNewtonCollisionMaterial
{
public:
	__int64 m_userId;
	TNewtonMaterialData m_userData;
	System::StaticArray<TNewtonMaterialData, 6> m_userParam;
};
typedef TNewtonCollisionMaterial *PNewtonCollisionMaterial;
typedef int __cdecl (*NewtonTreeCollisionFaceCallback)(const void * context, const PFloat polygon, int strideInBytes, const PInteger indexArray, int indexCount);
typedef float __cdecl (*NewtonCollisionTreeRayCastCallback)(const PNewtonBody body, const PNewtonCollision treeCollision, float intersection, const PFloat normal, int faceId, const void * usedData);
typedef float __cdecl (*NewtonHeightFieldRayCastCallback)(const PNewtonBody body, const PNewtonCollision heightFieldCollision, float intersection, int row, int col, const PFloat normal, int faceId, const void * usedData);
typedef void __cdecl (*NewtonTreeCollisionCallback)(const PNewtonBody bodyWithTreeCollision, const PNewtonBody body, int faceID, int vertexCount, const PFloat vertex, int vertexStrideInBytes);
typedef void __cdecl (*NewtonCollisionIterator)(const void * userData, int vertexCount, const PFloat faceArray, int faceId);
//-- var, const, procedure ---------------------------------------------------
#define NEWTON_API L"newton32s.dll"
extern "C" PNewtonCollision __cdecl NewtonCreateHeightFieldCollision(const PNewtonWorld newtonWorld, int width, int height, int gridsDiagonals, int elevationdatType, const void * elevationMap, const System::WideChar * attributeMap, float verticalScale, float horizontalScale_x, float horizontalScale_z, int shapeID);
extern "C" void __cdecl NewtonHeightFieldSetUserRayCastCallback(const PNewtonCollision heightfieldCollision, NewtonHeightFieldRayCastCallback rayHitCallback);
extern "C" void __cdecl NewtonHeightFieldSetHorizontalDisplacement(PNewtonCollision heightfieldCollision, System::PWord horizontalMap, float scale);
extern "C" PNewtonCollision __cdecl NewtonCreateTreeCollision(const PNewtonWorld newtonWorld, int shapeID);
extern "C" PNewtonCollision __cdecl NewtonCreateTreeCollisionFromMesh(const PNewtonWorld newtonWorld, const PNewtonMesh mesh, int shapeID);
extern "C" void __cdecl NewtonTreeCollisionSetUserRayCastCallback(const PNewtonCollision treeCollision, NewtonCollisionTreeRayCastCallback rayHitCallback);
extern "C" void __cdecl NewtonTreeCollisionBeginBuild(const PNewtonCollision treeCollision);
extern "C" void __cdecl NewtonTreeCollisionAddFace(const PNewtonCollision treeCollision, int vertexCount, const PFloat vertexPtr, int strideInBytes, int faceAttribute);
extern "C" void __cdecl NewtonTreeCollisionEndBuild(const PNewtonCollision treeCollision, int optimize);
extern "C" int __cdecl NewtonTreeCollisionGetFaceAttribute(const PNewtonCollision treeCollision, const PInteger faceIndexArray, int indexCount);
extern "C" void __cdecl NewtonTreeCollisionSetFaceAttribute(const PNewtonCollision treeCollision, const PInteger faceIndexArray, int indexCount, int attribute);
extern "C" void __cdecl NewtonTreeCollisionForEachFace(const PNewtonCollision treeCollision, NewtonTreeCollisionFaceCallback forEachFaceCallback, const void * context);
extern "C" int __cdecl NewtonTreeCollisionGetVertexListTriangleListInAABB(const PNewtonCollision treeCollision, const PFloat p0, const PFloat p1, const PFloat vertexArray, const PInteger vertexCount, const PInteger vertexStrideInBytes, const PInteger indexList, int maxIndexCount, const PInteger faceAttribute);
extern "C" void __cdecl NewtonStaticCollisionSetDebugCallback(const PNewtonCollision staticCollision, NewtonTreeCollisionCallback userCallback);
extern "C" PNewtonCollision __cdecl NewtonCollisionCreateInstance(const PNewtonCollision collision);
extern "C" int __cdecl NewtonCollisionGetType(const PNewtonCollision collision);
extern "C" int __cdecl NewtonCollisionIsConvexShape(const PNewtonCollision collision);
extern "C" int __cdecl NewtonCollisionIsStaticShape(const PNewtonCollision collision);
extern "C" void __cdecl NewtonCollisionSetUserData(const PNewtonCollision collision, const void * userData);
extern "C" void * __cdecl NewtonCollisionGetUserData(const PNewtonCollision collision);
extern "C" void __cdecl NewtonCollisionSetUserID(const PNewtonCollision collision, __int64 id);
extern "C" __int64 __cdecl NewtonCollisionGetUserID(const PNewtonCollision collision);
extern "C" void __cdecl NewtonCollisionGetMaterial(const PNewtonCollision collision, const PNewtonCollisionMaterial userData);
extern "C" void __cdecl NewtonCollisionSetMaterial(const PNewtonCollision collision, const PNewtonCollisionMaterial userData);
extern "C" void * __cdecl NewtonCollisionGetSubCollisionHandle(const PNewtonCollision collision);
extern "C" PNewtonCollision __cdecl NewtonCollisionGetParentInstance(const PNewtonCollision collision);
extern "C" void __cdecl NewtonCollisionSetMatrix(const PNewtonCollision collision, const PFloat matrix);
extern "C" void __cdecl NewtonCollisionGetMatrix(const PNewtonCollision collision, const PFloat matrix);
extern "C" void __cdecl NewtonCollisionSetScale(const PNewtonCollision collision, float scaleX, float scaleY, float scaleZ);
extern "C" void __cdecl NewtonCollisionGetScale(const PNewtonCollision collision, const PFloat scaleX, const PFloat scaleY, const PFloat scaleZ);
extern "C" void __cdecl NewtonDestroyCollision(const PNewtonCollision collision);
extern "C" float __cdecl NewtonCollisionGetSkinThickness(const PNewtonCollision collision);
extern "C" void __cdecl NewtonCollisionSetSkinThickness(const PNewtonCollision collision, float thickness);
extern "C" int __cdecl NewtonCollisionIntersectionTest(const PNewtonWorld newtonWorld, const PNewtonCollision collisionA, const PFloat matrixA, const PNewtonCollision collisionB, const PFloat matrixB, int threadIndex);
extern "C" int __cdecl NewtonCollisionPointDistance(const PNewtonWorld newtonWorld, const PFloat point, const PNewtonCollision collision, const PFloat matrix, const PFloat contact, const PFloat normal, int threadIndex);
extern "C" int __cdecl NewtonCollisionClosestPoint(const PNewtonWorld newtonWorld, const PNewtonCollision collisionA, const PFloat matrixA, const PNewtonCollision collisionB, const PFloat matrixB, const PFloat contactA, const PFloat contactB, const PFloat normalAB, int threadIndex);
extern "C" int __cdecl NewtonCollisionCollide(const PNewtonWorld newtonWorld, int maxSize, const PNewtonCollision collisionA, const PFloat matrixA, const PNewtonCollision collisionB, const PFloat matrixB, const PFloat contacts, const PFloat normals, const PFloat penetration, const System::PInt64 attributeA, const System::PInt64 attributeB, int threadIndex);
extern "C" int __cdecl NewtonCollisionCollideContinue(const PNewtonWorld newtonWorld, int maxSize, float timestep, const PNewtonCollision collisionA, const PFloat matrixA, const PFloat velocA, const PFloat omegaA, const PNewtonCollision collisionB, const PFloat matrixB, const PFloat velocB, const PFloat omegaB, const PFloat timeOfImpact, const PFloat contacts, const PFloat normals, const PFloat penetration, const System::PInt64 attributeA, const System::PInt64 attributeB, int threadIndex);
extern "C" void __cdecl NewtonCollisionSupportVertex(const PNewtonCollision collision, const PFloat dir, const PFloat vertex);
extern "C" float __cdecl NewtonCollisionRayCast(const PNewtonCollision collision, const PFloat p0, const PFloat p1, const PFloat normal, const System::PInt64 attribute);
extern "C" void __cdecl NewtonCollisionCalculateAABB(const PNewtonCollision collision, const PFloat matrix, const PFloat p0, const PFloat p1);
extern "C" void __cdecl NewtonCollisionForEachPolygonDo(const PNewtonCollision collision, const PFloat matrix, NewtonCollisionIterator callback, const void * userData);